--- a/views/index.jade
+++ b/views/index.jade
@@ -2,5 +2,6 @@ extends layout
 
 block content
   h1= title
+  img(src="img/hello-there.jpg", alt="Hello There")
   p= "Here is your quote:"
   h2 #{quotes}
